<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activities.auth.SignUpActivity"
    android:background="@color/color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/color_text_dark"
            android:layout_gravity="start"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_sign_up"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textColor="@color/color_text_normal"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textColor="@color/color_text_normal"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:id="@+id/inputEmail"
            android:layout_marginBottom="7dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textColor="@color/color_text_normal"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:id="@+id/inputPass"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textColor="@color/color_text_normal"
            android:layout_marginBottom="7dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/user_name"
            android:textColor="@color/color_text_dark"
            android:textSize="16sp"
            android:inputType="text"
            android:id="@+id/inputUserName"
            android:layout_marginBottom="20dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/color_primary"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/color_text_light"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/buttonSignUp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="18sp"
                android:layout_marginEnd="14dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/color_primary"
                android:text="@string/sign_in"
                android:id="@+id/textSignIn"/>

        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/progressBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>