<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activities.home.AddActivity"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/color_primary"
        android:layout_gravity="top">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="30dp"
            android:src="@drawable/icon_back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_new"
            android:textAllCaps="true"
            android:textColor="@color/color_text_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageBack"
            app:layout_constraintStart_toStartOf="@id/imageBack"
            android:layout_marginTop="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="30dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"    
            android:hint="@string/tag_image"
            android:textSize="16sp"
            android:textColor="@color/color_text_dark"
            android:id="@+id/inputTagImage"
            android:layout_marginBottom="10dp"/>
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:id="@+id/image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/add"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_text_light"
            android:background="@color/color_primary"
            android:layout_marginTop="30dp"
            android:id="@+id/buttonAdd"/>

    </LinearLayout>

</LinearLayout>